Fixed span button click not working on mobiles

--- a/style/style.less
+++ b/style/style.less
@@ -16,6 +16,10 @@
   src: url(./fonts/CooperHewitt-Bold.otf);
 }
 
+*, html {
+  scroll-behavior: smooth !important;
+}
+
 body {
   font-family: Roboto, Verdana, sans-serif;
   font-size: 15px;
@@ -350,8 +354,7 @@ header {
 
   div[data-position="1"] {
     p,
-    span,
-    a {
+    span{
       font-size: 1.4em;
     }
 
